# google-faq-agent

./: Dockerfile  README.md  dockerfile  pyproject.toml
agents/: faq_agent.py
api/: main.py
data/: faq.txt  faq_embeddings.json
scripts/: embed_faq.py  search_faq.py  test_agent.py  test_auth.py  test_search.py
services/: search.py
