[tool.poetry]
name = "faq-agent"
version = "0.1.0"
description = "Faq Agent built in Google AI ecosystem"
authors = ["AnishNavalgund <anishk.navalgund@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.10,<3.11"
google-cloud-aiplatform = ">=1.38.0,<2.0.0"
google-cloud-storage = ">=2.12.0,<3.0.0"
python-dotenv = ">=1.1.1,<2.0.0"
pydantic-ai = ">=0.4.2,<0.5.0"
pydantic-ai-slim = { version = ">=0.4.2,<0.5.0", extras = ["vertexai"] }
flask = ">=3.1.1,<4.0.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
